# volumetric-display

./: .bazelignore  .bazelrc  .clang-format  .cursorignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  3d_snake.py  BUILD  Cargo.toml  DisplayConfig.h  MODULE.bazel  README.md  VolumetricDisplay.cpp  VolumetricDisplay.h  WORKSPACE  artnet.py  base_game.py  big_cube_config.json  blinky_game.py  calibration_scene.py  color_correction.h  config.json  control_port.py  control_port_rust.py  control_port_test.py  controller_config.json  controller_simulator.py  controller_simulator_lib.py  discover.py  enumerate_scene.py  full_white_scene.py  game_scene.py  game_util.py  games_simulator_default.sh  gen_routing_table.py  main.cpp  manual.py  plane_scene.py  (+17 more)
.github/workflows/: test.yaml
cross/: Dockerfile  flake.nix  test.sh
games/: blinky_game.py  pong_game.py  snake_game.py  space_invaders_game.py  sphere_shooter_game.py
games/util/: BUILD  base_game.py  game_scene.py  game_util.py  game_util_rust.py
mapper/: BUILD  mapper.py
resources/: BUILD  icon.cpp  icon.h  icon_helper.h  icon_helper_linux.cpp  icon_helper_osx.cpp
src/: main.rs
src/artnet/: BUILD  Cargo.toml  lib.rs
src/control_port/: BUILD  Cargo.toml  control_port.rs  lib.rs  web_monitor.rs
src/sender_monitor/: BUILD  Cargo.toml  lib.rs  sender_monitor.rs  web_monitor.rs
static/: BUILD  dashboard.html  debug_dashboard.html
tests/: BUILD  control_port_integration_test.py  real_control_port_integration_test.py
touchdesigner/: ct8_merged.toe  donut.44.toe  donut.45.toe  donut.toe  volumetric.tox
