[package]
name = "control_port_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "control_port_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py311"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
axum = "0.7"
base64 = "0.21"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
